# curve-fit-nd

./: LICENSE  readme.rst
c/: curve_fit_nd.h
c/intern/: curve_fit_cubic.c  curve_fit_cubic_incremental.c  curve_fit_cubic_refit.c  generic_alloc_impl.h  generic_heap.c  generic_heap.h  generic_heap_impl.c  heap_impl.c  heap_impl.h
c_python_ext/: CMakeLists.txt  curve_fit_nd_ext.c
tests/: tests.py
tests/data/: test_curve_freehand_01.py  test_curve_freehand_02.py  test_curve_freehand_03.py  test_curve_freehand_04_cyclic.py
